# foreigncc

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeSettings.json  README.md  appveyor.yml
ci/linux/: before_build.bash  build.bash  common.bashrc  deploy.bash  test.bash
ci/windows/: before_build.bat  build.bat  deploy.bat  test.bat
lint/pre-commit/: run.bash  run.py
src/: config.h.cmakein  main.cpp
src/common/: assertion.h  basic.h  common.h  macros.h
test/: test_assertions.cpp
test/driver/: assertion.h  driver.cpp  driver.h
